department-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: department-service
  namespace: department-prod
spec:
  selector:
    app: department-service
  ports:
    - port: 80
      targetPort: 80
