department-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "department-ingress"
  namespace: department-dev

spec:
  rules:
    - host:
      http:
        paths:
          - path: /department
            backend:
              serviceName: department-service
              servicePort: 80
